tests/const_type_param_unsupported/const_type_param_unsupported.exp
Error ----------------------------------------------------------------------------------------------------- file.js:1:13

Const type parameters are not yet supported. This modifier will be ignored. [unsupported-syntax]

   1| function f1<const X>(): void {}
                  ^^^^^


Error ------------------------------------------------------------------------------------------------------ file.js:2:9

Const type parameters are not yet supported. This modifier will be ignored. [unsupported-syntax]

   2| class C<const X> {
              ^^^^^


Error ------------------------------------------------------------------------------------------------------ file.js:3:7

Const type parameters are not yet supported. This modifier will be ignored. [unsupported-syntax]

   3|     m<const T>(x: X, t: T) {}
            ^^^^^


Error ------------------------------------------------------------------------------------------------------ file.js:5:8

Const type parameters are not yet supported. This modifier will be ignored. [unsupported-syntax]

   5| type T<const X> = void;
             ^^^^^



Found 4 errors
